--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -8,9 +8,10 @@
     "@types/chai": "4.1.4",
     "@types/mocha": "5.2.5",
     "chai": "~4.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nyc": "15.0.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "nyc --reporter=html mocha"
   }
 }
