--- a/JavaScript/package.json
+++ b/JavaScript/package.json
@@ -5,10 +5,10 @@
   "author": "Görge Albrecht",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "4.1.4",
-    "@types/mocha": "5.2.5",
-    "chai": "~4.1",
-    "mocha": "^5.2.0",
+    "@types/chai": "4.2.0",
+    "@types/mocha": "5.2.0",
+    "chai": "4.2.0",
+    "mocha": "5.2.0",
     "nyc": "15.0.0"
   },
   "scripts": {
