--- a/JavaScript/.gitignore
+++ b/JavaScript/.gitignore
@@ -1,6 +1,8 @@
+# NPM
 node_modules/
 npm-debug.log
-coverage
+coverage/
+.nyc_output/
 .stryker-tmp
 
 # Eclipse
@@ -12,4 +14,3 @@ coverage
 .idea
 *.iml
 *.iwr
-/.nyc_output/
